--- a/joomla25/media/com_simplelists/css/backend-j35.css
+++ b/joomla25/media/com_simplelists/css/backend-j35.css
@@ -7,55 +7,6 @@
  * @link http://www.yireo.com
  */
 
-fieldset.adminform {
-    border: 1px solid #dfdfdf !important;
-    background-color: #f1f1f1;
-}
-
-fieldset.adminform td.key {
-    background-color: #dfdfdf;
-    padding: 5px;
-    line-height: 16px;
-    text-align: right;
-}
-
-fieldset.adminform td.value label {
-    float: left;
-    clear: none;
-    min-width: 15px;
-    width: auto;
-    padding-left: 10px;
-    padding-right: 15px;
-    padding-top: 0px !important;
-    line-height: 16px;
-    display: inline;
-}
-
-fieldset.adminform td.value select {
-    clear: both;
-}
-
-fieldset.adminform td.value {
-    padding-left: 5px;
-    width: 400px !important;
-}
-
-fieldset.adminform td.value div.controls {
-    padding-left: 20px;
-}
-
-fieldset.adminform td.value div.controls label {
-    line-height: 24px;
-}
-
-/*fieldset.adminform td.value div.controls input {
-    min-height: 24px;
-}*/
-
-td.vital {
-    border: 0px solid #85b1cd !important;
-}
-
 div#cpanel div.icon {
     text-align: center;
     margin-right: 15px;
@@ -78,4 +29,13 @@ background-color: rgba(0,0,0,.02);
 div#cpanel div.icon span {
     display: block;
     text-align: center;
+}
+
+div.tab-pane-plugins div.simplelists_link_inner {
+    margin-left: 40px;
+    margin-bottom:25px;
+}
+
+div.image-preview {
+    padding: 20px;
 }
