--- a/joomla15/media/com_simplelists/css/backend-j25.css
+++ b/joomla15/media/com_simplelists/css/backend-j25.css
@@ -1,9 +1,9 @@
 /*
- * Joomla! component MageBridge
+ * Joomla! common
  *
  * @author Yireo (info@yireo.com)
- * @package MageBridge
- * @copyright Copyright 2012
+ * @package Yireo Commons
+ * @copyright Copyright 2013
  * @link http://www.yireo.com
  */
 
@@ -45,3 +45,16 @@ fieldset.adminform span.input-span {
     float:left;
 }
 
+table.paramlist {
+    width: 100%;
+}
+
+table.paramlist td {
+    padding: 5px;
+}
+
+fieldset.btn-group input, fieldset.btn-group label {
+    float: none;
+    padding-right: 2px;
+    display: inline;
+}
