--- a/joomla25/media/com_simplelists/css/backend-j35.css
+++ b/joomla25/media/com_simplelists/css/backend-j35.css
@@ -1,41 +1,51 @@
 /*
- * Joomla! component MageBridge
+ * Yireo Library for Joomla!
  *
- * @author Yireo (info@yireo.com)
- * @package MageBridge
- * @copyright Copyright 2012
+ * @author Yireo
+ * @package Yireo
+ * @copyright Copyright 2013
  * @link http://www.yireo.com
  */
 
-div#cpanel div.icon {
-    text-align: center;
-    margin-right: 15px;
+fieldset.adminform td.key {
+    padding-right: 4px;
+    text-align: right;
+}
+
+fieldset.adminform td.value label {
     float: left;
-    margin-bottom: 15px;
-    height: 74px;
-    width: 125px;
-    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
+    clear: none;
+    min-width: 15px;
+    width: auto;
+    padding-left: 10px;
+    padding-right: 15px;
+    padding-top: 0px !important;
+    line-height: 16px;
+    display: inline;
 }
 
-div#cpanel div.icon:hover {
-background-color: rgba(0,0,0,.02);
+fieldset.adminform td.value select {
+    clear: both;
 }
 
-div#cpanel div.icon span {
-    display: block;
-    text-align: center;
+fieldset.adminform td.value {
+    padding-left: 5px;
+    width: 400px !important;
 }
 
-div.tab-pane-plugins div.simplelists_link_inner {
-    margin-left: 40px;
-    margin-bottom:25px;
+fieldset.adminform td.value div.controls {
+    padding-left: 20px;
 }
 
-div.image-preview {
-    padding: 20px;
+fieldset.adminform td.value div.controls label {
+    line-height: 24px;
 }
+
+/*fieldset.adminform td.value div.controls input {
+    min-height: 24px;
+}*/
+
+td.vital {
+    border: 0px solid #85b1cd !important;
+}
+
