--- a/joomla25/media/com_simplelists/css/backend-j25.css
+++ b/joomla25/media/com_simplelists/css/backend-j25.css
@@ -1,8 +1,8 @@
 /*
- * Joomla! common
+ * Yireo Library for Joomla!
  *
  * @author Yireo (info@yireo.com)
- * @package Yireo Commons
+ * @package Yireo
  * @copyright Copyright 2014
  * @link http://www.yireo.com
  */
@@ -45,16 +45,6 @@ fieldset.adminform span.input-span {
     float:left;
 }
 
-table.paramlist {
-    width: 100%;
-}
-
-table.paramlist td {
-    padding: 5px;
-}
-
-fieldset.btn-group input, fieldset.btn-group label {
-    float: none;
-    padding-right: 2px;
-    display: inline;
+dd.notice pre {
+    white-space: pre-line;
 }
