--- a/joomla25/media/com_simplelists/css/backend-bootstrap-j25.css
+++ b/joomla25/media/com_simplelists/css/backend-bootstrap-j25.css
@@ -11,6 +11,8 @@ div#toolbar-box div.toolbar-list span {
 dd pre {
     background: none;
     border: 0;
+    font-size: 100%;
+    font-weight: normal;
 }
 
 .nav-tabs > li > a {
